[gd_scene load_steps=20 format=2]

[ext_resource path="res://Telas/FundoTela2.png" type="Texture" id=1]
[ext_resource path="res://Fonte/NicoBold/NicoBold-Regular.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets2/Icones/seta1.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Bebidas/Bebidas1.png" type="Texture" id=4]
[ext_resource path="res://Sprites/CaixaPesada/CaixasPesadas1.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Soninho/Sprite-0001.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Celular/Celular1.png" type="Texture" id=7]
[ext_resource path="res://Assets2/Icones/seta2.png" type="Texture" id=8]
[ext_resource path="res://Assets2/Icones/icones_gerais.png" type="Texture" id=9]
[ext_resource path="res://Assets2/IconsUI/ui_left.png" type="Texture" id=10]
[ext_resource path="res://Assets2/IconsUI/ui_down.png" type="Texture" id=11]
[ext_resource path="res://Assets2/IconsUI/ui_right.png" type="Texture" id=12]
[ext_resource path="res://Assets2/IconsUI/ui_up.png" type="Texture" id=13]
[ext_resource path="res://Cenas/Scripts/Instrucoes.gd" type="Script" id=14]
[ext_resource path="res://Sons/voltar.wav" type="AudioStream" id=15]
[ext_resource path="res://Sons/hover.wav" type="AudioStream" id=16]
[ext_resource path="res://Cenas/Transicao.tscn" type="PackedScene" id=17]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 2 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 14 )

[node name="Transicao" parent="." instance=ExtResource( 17 )]
layer = 0

[node name="FundoTela1" type="Sprite" parent="."]
position = Vector2( 639, 361 )
scale = Vector2( 6.666, 6.666 )
texture = ExtResource( 1 )

[node name="IconesGerais2" type="Sprite" parent="."]
position = Vector2( 423, 311.5 )
scale = Vector2( 11.087, 6.51111 )
texture = ExtResource( 9 )
region_enabled = true
region_rect = Rect2( 496.927, 128.834, 46.4114, 45.157 )

[node name="IconesGerais3" type="Sprite" parent="."]
position = Vector2( 951, 309 )
scale = Vector2( 11.9457, 6.81111 )
texture = ExtResource( 9 )
region_enabled = true
region_rect = Rect2( 496.927, 128.834, 46.4114, 45.157 )

[node name="IconesGerais" type="Sprite" parent="."]
position = Vector2( 636, 90 )
scale = Vector2( 5.87621, 3.78125 )
texture = ExtResource( 9 )
region_enabled = true
region_rect = Rect2( 155, 176, 103, 32 )

[node name="IconesGerais4" type="Sprite" parent="."]
position = Vector2( 636, 591.5 )
scale = Vector2( 9.33981, 9.28125 )
texture = ExtResource( 9 )
region_enabled = true
region_rect = Rect2( 155, 176, 103, 32 )

[node name="INSTRUCOES" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 474.0
margin_top = 52.0
margin_right = 561.0
margin_bottom = 68.0
rect_scale = Vector2( 4, 4 )
custom_fonts/font = SubResource( 1 )
text = "Instruções"

[node name="BotaoVoltar" type="TextureButton" parent="."]
margin_left = 12.0
margin_top = -2.0
margin_right = 36.0
margin_bottom = 34.0
rect_scale = Vector2( 4, 4 )
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 8 )

[node name="UiUp" type="Sprite" parent="."]
position = Vector2( 645, 579 )
scale = Vector2( 2.1237, 1.85547 )
texture = ExtResource( 13 )

[node name="Keyboard71" type="Sprite" parent="."]
position = Vector2( 644, 645 )
scale = Vector2( 2.1224, 1.77344 )
texture = ExtResource( 11 )

[node name="Keyboard72" type="Sprite" parent="."]
position = Vector2( 722, 643 )
scale = Vector2( 2.1237, 1.85547 )
texture = ExtResource( 12 )

[node name="Keyboard73" type="Sprite" parent="."]
position = Vector2( 566, 647 )
scale = Vector2( 2.15625, 1.875 )
texture = ExtResource( 10 )

[node name="BOTOES" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 197.0
margin_top = 488.0
margin_right = 1114.0
margin_bottom = 541.0
custom_fonts/font = SubResource( 2 )
text = "Botões que serão utilizados:"
align = 1

[node name="Celular1" type="Sprite" parent="."]
position = Vector2( 698, 230 )
scale = Vector2( 4.125, 4.375 )
texture = ExtResource( 7 )

[node name="BEBIDAS" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 261.0
margin_top = 191.0
margin_right = 527.0
margin_bottom = 245.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = SubResource( 1 )
text = "     Consumo de bebidas
Ao consumir bebidas a visão
do jogador ficam embaçada"

[node name="CaixasPesadas1" type="Sprite" parent="."]
position = Vector2( 179, 376 )
scale = Vector2( 4.21875, 4.3125 )
texture = ExtResource( 5 )

[node name="CARGAS" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 262.0
margin_top = 340.0
margin_right = 528.0
margin_bottom = 394.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = SubResource( 1 )
text = "      Cargas excessivas
cargas em excesso fazem o
caminhão derrapar na pista"

[node name="Bebidas1" type="Sprite" parent="."]
position = Vector2( 179, 238 )
scale = Vector2( 4.125, 4.34375 )
texture = ExtResource( 4 )

[node name="CELULAR" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 795.0
margin_top = 176.0
margin_right = 1061.0
margin_bottom = 249.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = SubResource( 1 )
text = "           Uso do celular
usar o celular faz com que o
motorista perca o controle 
            do caminhão"

[node name="sono" type="Sprite" parent="."]
position = Vector2( 693, 385 )
scale = Vector2( 4.1875, 4.35636 )
texture = ExtResource( 6 )

[node name="SONO" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 793.0
margin_top = 340.0
margin_right = 1059.0
margin_bottom = 413.0
rect_scale = Vector2( 1.4, 1.4 )
custom_fonts/font = SubResource( 1 )
text = "         Falta de descanso
O descanso é essencial. O sono
ocasiona fechamento dos olhos 
       involuntariamente"

[node name="SomVoltar" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
volume_db = -13.0

[node name="SomHover" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )
volume_db = -13.0

[connection signal="mouse_entered" from="BotaoVoltar" to="." method="_on_BotaoVoltar_mouse_entered"]
[connection signal="mouse_entered" from="BotaoVoltar" to="." method="_on_botoVoltar_mouse_entered"]
[connection signal="pressed" from="BotaoVoltar" to="." method="_on_BotaoVoltar_pressed"]
